# lib-open-ultrahdr

./: .gitignore  .gitmodules  .prettierignore  .prettierrc  LICENSE  LICENSE-MIT  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  npm-publish.yml
js/: README.md  eslint.config.mjs  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
js/__tests__/: decode.test.ts  detection.test.ts  encode.test.ts  integration.test.ts  metadata.test.ts  probe.test.ts  setup.ts
js/__tests__/fixtures/: test-data.ts
js/src/: index.ts  types.ts
wasm/: .npmignore  CMakeLists.txt  Cargo.toml  README.md  package.json
wasm/pkg/: open_ultrahdr.d.ts
wasm/src/: bindings.cpp  error.rs  jpeg_meta.cpp  jpeg_meta.h  lib.rs  types.rs
wasm/src/gainmap/: decode.rs  encode.rs  math.rs  metadata.rs  mod.rs
wasm/src/jpeg/: mod.rs  parser.rs  writer.rs  xmp.rs
wasm/src/ultrahdr/: decoder.rs  encoder.rs  mod.rs
