[package]
name = "open-ultrahdr"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["Adam Silverstein"]
description = "UltraHDR (ISO 21496-1) gain map implementation for WebAssembly"
repository = "https://github.com/adamsilverstein/lib-open-ultrahdr"
readme = "README.md"
keywords = ["ultrahdr", "hdr", "gain-map", "iso-21496", "wasm"]
categories = ["multimedia::images", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings (MIT/Apache-2.0)
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Image processing (MIT/Apache-2.0)
image = { version = "0.25", default-features = false, features = ["jpeg"] }
zune-jpeg = { version = "0.4", default-features = false, features = ["std"] }

# XMP/XML parsing (MIT)
quick-xml = "0.31"

# Serialization (MIT/Apache-2.0)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (MIT/Apache-2.0)
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
